--- a/location/templates/location/index.html
+++ b/location/templates/location/index.html
@@ -3,6 +3,11 @@
 {% block title %} Accueil {% endblock %}
 
 {% block content %}
+<!-- Intro Single :
+    property,agent,blog,contact,section
+
+    Intro Section
+ -->
 
 
   <!-- ======= Intro Section ======= -->
@@ -22,10 +27,10 @@
                         <br>{{ apartment.country }}
                       </p>
                       <h1 class="intro-title mb-4 ">
-                        {{ apartment.adresse }}
+                        {{ apartment.address }}
                       </h1>
                       <p class="intro-subtitle intro-price">
-                        <a href="#"><span class="price-a">rent | $ {{ apartment.price }}</span></a>
+                        <a href="{% url 'property' apartment.slug %}"><span class="price-a">rent | $ {{ apartment.price }}</span></a>
                       </p>
                     </div>
                   </div>
@@ -151,53 +156,7 @@
         <div id="property-carousel" class="swiper">
           <div class="swiper-wrapper">
             {% for apartment in apartments %}
-              <div class="carousel-item-b swiper-slide">
-                <div class="card-box-a card-shadow">
-                  <div class="img-box-a">
-                    <img src=" {{ apartment.image.url }} " alt="" class="img-a img-fluid">
-                  </div>
-                  <div class="card-overlay">
-                    <div class="card-overlay-a-content">
-                      <div class="card-header-a">
-                        <h2 class="card-title-a">
-                          <a href="property-single.html">{{ apartment.name }} {{ apartment.city }}
-                            <br /> {{ apartment.adresse }}</a>
-                        </h2>
-                      </div>
-                      <div class="card-body-a">
-                        <div class="price-box d-flex">
-                          <span class="price-a">rent | $ {{ apartment.price }}</span>
-                        </div>
-                        <a href="#" class="link-a">Click here to view
-                          <span class="bi bi-chevron-right"></span>
-                        </a>
-                      </div>
-                      <div class="card-footer-a">
-                        <ul class="card-info d-flex justify-content-around">
-                          <li>
-                            <h4 class="card-info-title">Area</h4>
-                            <span>{{ apartment.area }}
-                              <sup>2</sup>
-                            </span>
-                          </li>
-                          <li>
-                            <h4 class="card-info-title">Beds</h4>
-                            <span>{{ apartment.bed_rooms }}</span>
-                          </li>
-                          <li>
-                            <h4 class="card-info-title">Baths</h4>
-                            <span>{{ apartment.bath_rooms }}</span>
-                          </li>
-                          <li>
-                            <h4 class="card-info-title">Garages</h4>
-                            <span>{{ apartment.garage }} </span>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div><!-- End carousel item -->
+              {% include 'location/includes/property_item.html' %}
             {% endfor %}
           </div>
         </div>
@@ -225,62 +184,7 @@
         </div>
         <div class="row">
           {% for agent in agents %}
-            <div class="col-md-4">
-              <div class="card-box-d">
-                <div class="card-img-d">
-                  <img src="{{ agent.image.url }} " alt="" class="img-d img-fluid">
-                </div>
-                <div class="card-overlay card-overlay-hover">
-                  <div class="card-header-d">
-                    <div class="card-title-d align-self-center">
-                      <h3 class="title-d">
-                        <a href="agent-single.html" class="link-two"> {{ agent.firstname }} {{ agent.lastname }}
-                          <br> Escala</a>
-                      </h3>
-                    </div>
-                  </div>
-                  <div class="card-body-d">
-                    <p class="content-d color-text-a">
-                      {{ agent.description }}
-                    </p>
-                    <div class="info-agents color-a">
-                      <p>
-                        <strong>Phone: </strong> {{ agent.phone_number }}
-                      </p>
-                      <p>
-                        <strong>Email: </strong> {{  agent.email }}
-                      </p>
-                    </div>
-                  </div>
-                  <div class="card-footer-d">
-                    <div class="socials-footer d-flex justify-content-center">
-                      <ul class="list-inline">
-                        <li class="list-inline-item">
-                          <a href="#" class="link-one">
-                            <i class="bi bi-facebook" aria-hidden="true"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#" class="link-one">
-                            <i class="bi bi-twitter" aria-hidden="true"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#" class="link-one">
-                            <i class="bi bi-instagram" aria-hidden="true"></i>
-                          </a>
-                        </li>
-                        <li class="list-inline-item">
-                          <a href="#" class="link-one">
-                            <i class="bi bi-linkedin" aria-hidden="true"></i>
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+            {% include 'location/includes/agent_item.html' %}
           {% endfor %}
         </div>
       </div>
@@ -306,30 +210,8 @@
 
         <div id="news-carousel" class="swiper">
           <div class="swiper-wrapper">
-            {% for apartment in apartments %}
-              <div class="carousel-item-c swiper-slide">
-                <div class="card-box-b card-shadow news-box">
-                  <div class="img-box-b">
-                    <img src="{{ apartment.image.url }}" alt="" class="img-b img-fluid">
-                  </div>
-                  <div class="card-overlay">
-                    <div class="card-header-b">
-                      <div class="card-category-b">
-                        <a href="#" class="category-b">House</a>
-                      </div>
-                      <div class="card-title-b">
-                        <h2 class="title-2">
-                          <a href="blog-single.html">House is comming
-                            <br> new</a>
-                        </h2>
-                      </div>
-                      <div class="card-date">
-                        <span class="date-b">18 Sep. 2017</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div><!-- End carousel item -->
+            {% for post in posts %}
+              {% include 'location/includes/post_item.html' %}
             {% endfor %}
           </div>
         </div>
