--- a/location/templates/location/property-single.html
+++ b/location/templates/location/property-single.html
@@ -10,8 +10,8 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">304 Blaster Up</h1>
-              <span class="color-text-a">Chicago, IL 606543</span>
+              <h1 class="title-single">{{ apartment.name }}  </h1>
+              <span class="color-text-a">{{ apartment.address }}</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -24,7 +24,7 @@
                   <a href="{% url 'property'  'grid' %}">Properties</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
-                  304 Blaster Up
+                  {{ apartment.name }}
                 </li>
               </ol>
             </nav>
@@ -40,12 +40,11 @@
           <div class="col-lg-8">
             <div id="property-single-carousel" class="swiper">
               <div class="swiper-wrapper">
-                <div class="carousel-item-b swiper-slide">
-                  <img src="{% static 'location/img/slide-1.jpg' %}" alt="">
-                </div>
-                <div class="carousel-item-b swiper-slide">
-                  <img src="{% static 'location/img/slide-2.jpg' %}" alt="">
-                </div>
+                {% for image in apartment.image.url %}
+                  <div class="carousel-item-b swiper-slide">
+                    <img src="{{image}}" alt="">
+                  </div>
+                {% endfor %}
               </div>
             </div>
             <div class="property-single-carousel-pagination carousel-pagination"></div>
@@ -63,7 +62,7 @@
                       <span class="bi bi-cash">$</span>
                     </div>
                     <div class="card-title-c align-self-center">
-                      <h5 class="title-c">15000</h5>
+                      <h5 class="title-c">{{ apartment.price }}</h5>
                     </div>
                   </div>
                 </div>
@@ -78,12 +77,8 @@
                   <div class="summary-list">
                     <ul class="list">
                       <li class="d-flex justify-content-between">
-                        <strong>Property ID:</strong>
-                        <span>1134</span>
-                      </li>
-                      <li class="d-flex justify-content-between">
                         <strong>Location:</strong>
-                        <span>Chicago, IL 606543</span>
+                        <span>{{ apartment.address }}</span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Property Type:</strong>
@@ -95,21 +90,21 @@
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Area:</strong>
-                        <span>340m
+                        <span>{{ apartment.area }}
                           <sup>2</sup>
                         </span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Beds:</strong>
-                        <span>4</span>
+                        <span>{{ apartment.bed_rooms }}</span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Baths:</strong>
-                        <span>2</span>
+                        <span>{{ apartment.bath_rooms }}</span>
                       </li>
                       <li class="d-flex justify-content-between">
                         <strong>Garage:</strong>
-                        <span>1</span>
+                        <span>{{ apartment.garage }}</span>
                       </li>
                     </ul>
                   </div>
@@ -125,16 +120,7 @@
                 </div>
                 <div class="property-description">
                   <p class="description color-text-a">
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit
-                    neque, auctor sit amet
-                    aliquam vel, ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta.
-                    Curabitur aliquet quam id dui posuere blandit. Mauris blandit aliquet elit, eget tincidunt
-                    nibh pulvinar quam id dui posuere blandit.
-                  </p>
-                  <p class="description color-text-a no-margin">
-                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget
-                    malesuada. Quisque velit nisi,
-                    pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada.
+                    {{ apartment.description }}
                   </p>
                 </div>
                 <div class="row section-t3">
@@ -194,32 +180,26 @@
             </div>
             <div class="row">
               <div class="col-md-6 col-lg-4">
-                <img src="{% static 'location/img/agent-4.jpg' %}" alt="" class="img-fluid">
+                <img src="{{ apartment.agent.image.url }}" alt="" class="img-fluid">
               </div>
               <div class="col-md-6 col-lg-4">
                 <div class="property-agent">
-                  <h4 class="title-agent">Anabella Geller</h4>
+                  <h4 class="title-agent">{{ apartment.agent.first_name }} {{ apartment.agent.last_name }}</h4>
                   <p class="color-text-a">
-                    Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
-                    dui. Quisque velit nisi,
-                    pretium ut lacinia in, elementum id enim.
+                    {{ apartment.agent.description }}
                   </p>
                   <ul class="list-unstyled">
                     <li class="d-flex justify-content-between">
                       <strong>Phone:</strong>
-                      <span class="color-text-a">(222) 4568932</span>
-                    </li>
-                    <li class="d-flex justify-content-between">
-                      <strong>Mobile:</strong>
-                      <span class="color-text-a">777 287 378 737</span>
+                      <span class="color-text-a">{{ apartment.agent.phone_number }}</span>
                     </li>
                     <li class="d-flex justify-content-between">
                       <strong>Email:</strong>
-                      <span class="color-text-a">annabella@example.com</span>
+                      <span class="color-text-a">{{ apartment.agent.email }}</span>
                     </li>
                     <li class="d-flex justify-content-between">
                       <strong>Skype:</strong>
-                      <span class="color-text-a">Annabela.ge</span>
+                      <span class="color-text-a">{{ apartment.agent.first_name }}.ge</span>
                     </li>
                   </ul>
                   <div class="socials-a">
@@ -251,7 +231,7 @@
               <div class="col-md-12 col-lg-4">
                 <div class="property-contact">
                   <form class="form-a">
-                    <div class="row">
+                    <div class="row"> 
                       <div class="col-md-12 mb-1">
                         <div class="form-group">
                           <input type="text" class="form-control form-control-lg form-control-a" id="inputName" placeholder="Name *" required>
